print fix
